src/main/java/com/example/bank/_core/errors/exception/Exception500.java
package com.example.bank._core.errors.exception;

public class Exception500 extends RuntimeException{

    public Exception500(String msg) {
        super(msg);
    }
}
